# AllocationGraph

./: .exrc  .gitignore  AllocationGraph.cabal  credentials.default.cfg  makefile  stack.yaml  todo.org
app/: FA.hs  Main.hs
src/: AllocationGraph.hs
src/AllocationGraph/: Csv.hs  Diagrams.hs  Type.hs
test/: AllocationGraphSpec.hs
