name:                AllocationGraph
version:             0.1.0.0
synopsis:            Draw allocation graph for FrontAccounting customers and suppliers
description:         Please see README.md
homepage:            http://github.com/maxigit/AllocationGraph#readme
license:             BSD3
license-file:        LICENSE
author:              Maxime Bourget
maintainer:          bmx007@gmail.com
copyright:           2015 Maxime Bourget
category:            Tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AllocationGraph
  other-modules:       AllocationGraph.Type
  build-depends:       base >= 4.7 && < 5
                      , lens
                      , diagrams
                      , base-prelude
                      , containers
  default-language:    Haskell2010

executable AllocationGraph
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AllocationGraph
  default-language:    Haskell2010

test-suite AllocationGraph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base-prelude
                     , lens
                     , AllocationGraph
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maxigit/AllocationGraph
